crates/sui-graphql-macros/tests/compile/root_type_typo_suggestion.stderr
error: Type 'Mutaton' not found in GraphQL schema. Did you mean 'Mutation'?
 --> tests/compile/root_type_typo_suggestion.rs:5:24
  |
5 | #[response(root_type = "Mutaton")]
  |                        ^^^^^^^^^
